split view w/ camera stream

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 			body { margin: 0; }
 		</style>
 	</head>
-	<body>
+	<body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+
 		<script type="module" src="/main.js"></script>
+		<iframe style="width: 50%; height:100%;" src="http://192.168.4.1"></iframe>
 	</body>
 </html>
